# Smart_CV

./: README.md  Summarize_private_documents_using_RAG_LangChain_and_LLMs.ipynb  default.sqlite  pyproject.toml  test_minimal.py
app/: main.py
app/pages/: matching_chat.py  projects.py  recommendations.py
app/services/: bootstrap_service.py
components/: base_components.py
components/Chunker/: RecursiveChunker.py
components/Embedder/: HF_embedder.py
components/Generator/: MistralGenerator.py
components/Prompt_Strategy/: commercial_prompt.py
components/Reader/: PdfReader.py
components/Retriever/: Chroma_retriever.py
config/: settings.py
core/: bootstrap.py  bootstrap_core.py  dependencies.py  orchestrator.py  pipeline.py  qualification.py  state.py
core/steps/: generation_step.py  judge_step.py  qualification_step.py  reformulation_step.py  retrieval_step.py
data/: projects.json  recommandations.json
data/chroma_index/: chroma.sqlite3  metadata.json
docs/: architecture.md
flow/: pipeline.py  state.py
flow/steps/: generation_step.py  reformulation_step.py  retrieval_step.py
monitoring/: guardrails.py  session.py
monitoring/feedback/: auto_feedback.py  definitions.py  user_feedback.py
monitoring/storage/: feedback_store.py
notebook/: 01_data_exploration.ipynb  RAG_Eric.ipynb
scripts/: app.py  app_streamlit.py  app_trulens.py  chat_cli.py  chat_cli_legacy.py  chat_cli_v2.py  main_cli.py  orchestrator.py  qualification.py
tests/unit/: test_bootstrap.py
trulens_integration/: __init__.py
utils/: models.py
(+3 files in other folders)
