[tool.poetry]
package-mode = true
packages = [
    { include = "components" },
    { include = "trulens_integration" },
    { include = "utils" }
]

[project]
name = "rag-cv"
version = "0.1.0"
description = ""
authors = [
    {name = "EricWetzel",email = "wetzeleric259@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "pypdf (>=3.16.0,<4.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "chromadb (>=1.4.1,<2.0.0)",
    "sentence-transformers (>=5.2.2,<6.0.0)",
    "langchain-mistralai (>=1.1.1,<2.0.0)",
    "streamlit (>=1.53.1,<2.0.0)",
    "trulens[all] (>=2.6.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)",
]
